// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItalicText Component renders correctly with custom font size 1`] = `
<Text
  fontSize={18}
  style={
    {
      "fontFamily": "Italic",
      "fontSize": 27,
    }
  }
>
  Custom Font Size
</Text>
`;

exports[`ItalicText Component renders correctly with default props 1`] = `
<Text
  style={
    {
      "fontFamily": "Italic",
      "fontSize": 21,
    }
  }
>
  Hello, World!
</Text>
`;
